k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-moscow
  labels:
    name: service-moscow
    app: service-moscow
