k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-moscow
  namespace: service-moscow
  labels:
    app: service-moscow
spec:
  selector:
    app: service-moscow
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
